Use $(THEOS) variable in Makefile, heavily revised README, added transitional packages. Also stuck in a nice NSLog for certain idiots who seem to think that claiming credit for things they didn’t write is cool.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,27 @@
-.DS_Store*
-*.swp
-release/
-.theos/
+LatestBuild
 *.deb
+*.dylib
+*.zip
+.DS_Store
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+xcuserdata
+profile
+*.moved-aside
+DerivedData
+.idea/
+*.hmap
+AppSyncUnified.xccheckout
+build/*
+*/build/*
+.theos
+theos
+_
+obj
+debs
