--- a/control
+++ b/control
@@ -1,4 +1,4 @@
-Conflicts: us.hackulo.appsync50, us.hackulo.appsync50plus
+Conflicts: us.hackulo.appsync50, us.hackulo.appsync50plus, com.hackyouriphone.appsync7, com.teiron.ppsync
 Depends: mobilesubstrate
 Depiction: http://cydia.angelxwind.net/?page/net.angelxwind.appsyncunified
 Maintainer: Karen Tsai (angelXwind) <angelXwind@angelxwind.net>
@@ -8,7 +8,7 @@ Replaces: us.hackulo.appsync50
 Package: net.angelxwind.appsyncunified
 Name: AppSync Unified
 Pre-Depends: firmware (>= 5.0), mobilesubstrate (>= 0.9.5000)
-Version: 4.2
+Version: 4.3
 Architecture: iphoneos-arm
 Description: AppSync Unified allows you to sync and install unsigned iOS applications. Works on iOS 5, 6, and 7.
 Section: Tweaks
