AppSync Unified 5 with full iOS 8 compatibility. Major rewrite thanks to @linusyang (postinst, appinst, much of the ASU dylib itself). Requires Cydia Substrate 0.9.5100

--- a/control
+++ b/control
@@ -1,5 +1,5 @@
-Conflicts: us.hackulo.appsync50, us.hackulo.appsync50plus, com.hackyouriphone.appsync7, com.teiron.ppsync, appsync50plus2.25pp
-Depends: mobilesubstrate
+Conflicts: us.hackulo.appsync50, us.hackulo.appsync50plus, com.hackyouriphone.appsync7, com.teiron.ppsync, appsync50plus2.25pp, com.linusyang.appsync
+Depends: firmware (>= 5.0), mobilesubstrate (>= 0.9.5100)
 Depiction: http://cydia.angelxwind.net/?page/net.angelxwind.appsyncunified
 Maintainer: Karen Tsai (angelXwind) <angelXwind@angelxwind.net>
 Homepage: http://cydia.angelxwind.net/
@@ -7,9 +7,8 @@ Provides: appsync
 Replaces: us.hackulo.appsync50
 Package: net.angelxwind.appsyncunified
 Name: AppSync Unified
-Pre-Depends: firmware (>= 5.0), mobilesubstrate (>= 0.9.5000)
-Version: 4.5
+Version: 5.1
 Architecture: iphoneos-arm
-Description: AppSync Unified allows you to sync and install unsigned iOS applications. Works on iOS 5, 6, and 7.
+Description: AppSync Unified allows you to sync and install unsigned iOS applications. Works on iOS 5, 6, 7, and 8.
 Section: Tweaks
 Author: Linus Yang, Karen Tsai <angelXwind@angelxwind.net>
