Added KAREN_ASU and YANG_ASU

--- a/AppSyncUnified/Makefile
+++ b/AppSyncUnified/Makefile
@@ -4,7 +4,7 @@ include $(THEOS)/makefiles/common.mk
 
 TWEAK_NAME = AppSyncUnified
 AppSyncUnified_FILES = AppSyncUnified.x dump.cpp
-AppSyncUnified_CFLAGS += -fvisibility=hidden
+AppSyncUnified_CFLAGS += -fvisibility=hidden -DKAREN_ASU
 AppSyncUnified_LIBRARIES = substrate
 
 include $(THEOS_MAKE_PATH)/tweak.mk
