--- a/transitional/nodelete-net.angelxwind.appsync60plus/DEBIAN/control
+++ b/transitional/nodelete-net.angelxwind.appsync60plus/DEBIAN/control
@@ -4,8 +4,8 @@ Depends: net.angelxwind.appsyncunified
 Description: Transitional package for AppSync Unified.
 Maintainer: Karen Tsai (angelXwind)
 Homepage: http://cydia.angelxwind.net/
-Name: AppSync Unified Transitional Package - AppSync for iOS 6.0+
+Name: AppSync Unified Transitional Package (60plus)
 Package: net.angelxwind.appsync60plus
 Section: Tweaks
-Version: 8.8
-Depiction: http://cydia.angelxwind.net/?page/net.angelxwind.appsyncunified
+Version: 9.0
+Depiction: http://cydia.angelxwind.net/?page/net.angelxwind.appsyncunified-transitional
