Fix for iOS 8.1.1 (TaiG), use access() instead of NSFileManager, added more package IDs to control file Conflicts section, appinst now has dpkg verification. Bumped to versions 5.3 and 0.3-asu. Also removed an unused zipzap submodule.

--- a/appinst/control
+++ b/appinst/control
@@ -3,7 +3,7 @@ Name: App Installer
 Priority: standard
 Pre-Depends: firmware (>= 5.0)
 Depends: net.angelxwind.appsyncunified (>= 5.1)
-Version: 0.2-asu
+Version: 0.3-asu
 Architecture: iphoneos-arm
 Description: install ipa files from command line
 Maintainer: Karen Tsai <angelXwind@angelxwind.net>
@@ -11,4 +11,5 @@ Author: Linus Yang <laokongzi+appsync@gmail.com>
 Section: Utilities
 Homepage: https://github.com/angelXwind/AppSync
 Tag: role::enduser, purpose::console
+Conflicts: com.sull.appinstaller
 Depiction: http://cydia.angelxwind.net/?page/com.linusyang.appinst
