--- a/transitional/nodelete-net.angelxwind.appsync60plus/DEBIAN/control
+++ b/transitional/nodelete-net.angelxwind.appsync60plus/DEBIAN/control
@@ -7,5 +7,6 @@ Homepage: http://cydia.angelxwind.net/
 Name: AppSync Unified Transitional Package (60plus)
 Package: net.angelxwind.appsync60plus
 Section: Tweaks
-Version: 9.0
+Version: 9.2
 Depiction: http://cydia.angelxwind.net/?page/net.angelxwind.appsyncunified-transitional
+Tag: cydia::obsolete
