--- a/control
+++ b/control
@@ -7,8 +7,8 @@ Provides: appsync
 Replaces: us.hackulo.appsync50
 Package: net.angelxwind.appsyncunified
 Name: AppSync Unified
-Version: 5.6
+Version: 5.7
 Architecture: iphoneos-arm
-Description: AppSync Unified allows you to sync and install unsigned iOS applications. Works on iOS 5, 6, 7, and 8.
+Description: AppSync Unified allows you to sync and install unsigned iOS applications. Works on iOS 5 and above.
 Section: Tweaks
 Author: Linus Yang, Karen Tsai <angelXwind@angelxwind.net>
