--- a/control
+++ b/control
@@ -1,5 +1,5 @@
 Conflicts: us.hackulo.appsync50, us.hackulo.appsync50plus, com.hackyouriphone.appsync7, com.teiron.ppsync, appsync50plus2.25pp, com.linusyang.appsync, com.sull.appsyncunified, com.sull.appsyncunifiedbeta, com.xsellize.appsync50, com.xsellize.appsync50plus, appsync50plus.178, appsync50plus2.178
-Depends: firmware (>= 5.0), mobilesubstrate (>= 0.9.5100)
+Depends: firmware (>= 5.0), mobilesubstrate (>= 0.9.5100), firmware (<< 10.3)
 Depiction: http://cydia.angelxwind.net/?page/net.angelxwind.appsyncunified
 Maintainer: Karen Tsai (angelXwind) <angelXwind@angelxwind.net>
 Homepage: http://cydia.angelxwind.net/
