Re-enabled `asu_inject` on 32-bit devices running the Phœnix iOS 9.3.5 jailbreak to work around a bug where rebooting and kickstarting the jailbreak would cause AppSync Unified to cease to function. Refactored many parts of AppSync Unified and appinst's code and removed many things that are no longer in use.

--- a/appinst/Makefile
+++ b/appinst/Makefile
@@ -1,19 +1,18 @@
-TARGET = iphone:clang:latest:6.0
+TARGET =: clang
 ARCHS = armv7 armv7s arm64
-TARGET_CODESIGN_FLAGS="-Sentitlement.plist"
+DEBUG = 0
+
+PACKAGE_VERSION = $(THEOS_PACKAGE_BASE_VERSION)
 THEOS_PACKAGE_DIR_NAME = debs
+TARGET_CODESIGN_FLAGS="-Sentitlement.plist"
 
 include $(THEOS)/makefiles/common.mk
 
 TOOL_NAME = appinst
-
 appinst_FILES = appinst.m $(wildcard zipzap/*.c) $(wildcard zipzap/*.cpp) $(wildcard zipzap/*.m) $(wildcard zipzap/*.mm)
-appinst_CFLAGS += -std=c++11 -stdlib=libc++ -fobjc-arc -include ./zipzap/zipzap-Prefix.pch -I./zipzap -fvisibility=hidden -Wno-unused-property-ivar -DKAREN_APPINST
+appinst_CFLAGS += -std=c++11 -stdlib=libc++ -fobjc-arc -include ./zipzap/zipzap-Prefix.pch -I./zipzap -fvisibility=hidden -Wno-unused-property-ivar
 appinst_FRAMEWORKS = Foundation ImageIO CoreGraphics
 appinst_PRIVATE_FRAMEWORKS = MobileCoreServices
 appinst_LIBRARIES = z
 appinst_INSTALL_PATH = /usr/bin
-
 include $(THEOS_MAKE_PATH)/tool.mk
-
-VERSION.INC_BUILD_NUMBER = 1
