Added `platform-application` entitlement to all applicable executable binaries, bump versions to appinst 1.1 and ASU 6.1 — appinst 1.1 slated for release soon.

--- a/appinst/Makefile
+++ b/appinst/Makefile
@@ -4,7 +4,6 @@ DEBUG = 0
 
 PACKAGE_VERSION = $(THEOS_PACKAGE_BASE_VERSION)
 THEOS_PACKAGE_DIR_NAME = debs
-TARGET_CODESIGN_FLAGS="-Sentitlement.plist"
 
 include $(THEOS)/makefiles/common.mk
 
@@ -15,4 +14,5 @@ appinst_FRAMEWORKS = Foundation ImageIO CoreGraphics
 appinst_PRIVATE_FRAMEWORKS = MobileCoreServices
 appinst_LIBRARIES = z
 appinst_INSTALL_PATH = /usr/bin
+appinst_CODESIGN_FLAGS = -Sappinst_entitlements.plist
 include $(THEOS_MAKE_PATH)/tool.mk
