--- a/appinst/Makefile
+++ b/appinst/Makefile
@@ -14,5 +14,5 @@ appinst_FRAMEWORKS = Foundation ImageIO CoreGraphics
 appinst_PRIVATE_FRAMEWORKS = MobileCoreServices
 appinst_LIBRARIES = z
 appinst_INSTALL_PATH = /usr/bin
-appinst_CODESIGN_FLAGS = -Sappinst_entitlements.plist
+appinst_CODESIGN_FLAGS = -Sappinst_entitlements.xml
 include $(THEOS_MAKE_PATH)/tool.mk
