--- a/control
+++ b/control
@@ -2,12 +2,12 @@ Conflicts: us.hackulo.appsync50, us.hackulo.appsync50plus, com.hackyouriphone.ap
 Depends: firmware (>= 5.0), mobilesubstrate (>= 0.9.5100), firmware (<= 11.1.2)
 Depiction: https://cydia.angelxwind.net/?page/net.angelxwind.appsyncunified
 Maintainer: Karen／明美 (angelXwind) <angelXwind@angelxwind.net>
-Homepage: http://cydia.angelxwind.net/
+Homepage: https://cydia.angelxwind.net/
 Provides: appsync
 Replaces: us.hackulo.appsync50
 Package: net.angelxwind.appsyncunified
 Name: AppSync Unified
-Version: 6.1
+Version: 9.0
 Architecture: iphoneos-arm
 Description: Enables the ability to install unsigned/fakesigned iOS applications.
 Section: Tweaks
