--- a/control
+++ b/control
@@ -1,7 +1,7 @@
 Conflicts: us.hackulo.appsync50, us.hackulo.appsync50plus, com.hackyouriphone.appsync7, com.teiron.ppsync, appsync50plus2.25pp, com.linusyang.appsync, com.sull.appsyncunified, com.sull.appsyncunifiedbeta, com.xsellize.appsync50, com.xsellize.appsync50plus, appsync50plus.178, appsync50plus2.178
 Depends: firmware (>= 5.0), mobilesubstrate (>= 0.9.5100), firmware (<= 11.1.2)
 Depiction: https://cydia.angelxwind.net/?page/net.angelxwind.appsyncunified
-Maintainer: Karen／明美 (angelXwind) <angelXwind@angelxwind.net>
+Maintainer: Karen／明美 (angelXwind) <karen@angelxwind.net>
 Homepage: https://cydia.angelxwind.net/
 Provides: appsync
 Replaces: us.hackulo.appsync50
@@ -11,4 +11,4 @@ Version: 9.0
 Architecture: iphoneos-arm
 Description: Enables the ability to install unsigned/fakesigned iOS applications.
 Section: Tweaks
-Author: Linus Yang, Karen／明美 <angelXwind@angelxwind.net>
+Author: Linus Yang, Karen／明美 <karen@angelxwind.net>
