--- a/control
+++ b/control
@@ -1,14 +1,14 @@
 Conflicts: us.hackulo.appsync50, us.hackulo.appsync50plus, com.hackyouriphone.appsync7, com.teiron.ppsync, appsync50plus2.25pp, com.linusyang.appsync, com.sull.appsyncunified, com.sull.appsyncunifiedbeta, com.xsellize.appsync50, com.xsellize.appsync50plus, appsync50plus.178, appsync50plus2.178
 Depends: firmware (>= 5.0), mobilesubstrate (>= 0.9.5100), firmware (<= 12.1.2)
-Depiction: https://cydia.angelxwind.net/?page/net.angelxwind.appsyncunified
-Maintainer: Karen/あけみ (angelXwind) <karen@angelxwind.net>
-Homepage: https://cydia.angelxwind.net/
+Depiction: https://cydia.akemi.ai/?page/net.angelxwind.appsyncunified
+Maintainer: Karen/あけみ <karen@akemi.ai>
+Homepage: https://cydia.akemi.ai/
 Provides: appsync
 Replaces: us.hackulo.appsync50
 Package: net.angelxwind.appsyncunified
 Name: AppSync Unified
-Version: 32.0
+Version: 40.0
 Architecture: iphoneos-arm
 Description: Enables the ability to install unsigned/fakesigned iOS applications.
 Section: Tweaks
-Author: Linus Yang, Karen/あけみ <karen@angelxwind.net>
+Author: Linus Yang, Karen/あけみ <karen@akemi.ai>
