--- a/transitional/nodelete-net.angelxwind.appsync50plus/DEBIAN/control
+++ b/transitional/nodelete-net.angelxwind.appsync50plus/DEBIAN/control
@@ -1,12 +1,12 @@
 Architecture: iphoneos-arm
-Author: Karen/あけみ (angelXwind)
+Author: Karen/あけみ
 Depends: net.angelxwind.appsyncunified
 Description: Transitional package for AppSync Unified.
-Maintainer: Karen/あけみ (angelXwind)
-Homepage: http://cydia.angelxwind.net/
+Maintainer: Karen/あけみ
+Homepage: http://cydia.akemi.ai/
 Name: AppSync Unified Transitional Package (50plus)
 Package: net.angelxwind.appsync50plus
 Section: Tweaks
-Version: 999.0
-Depiction: https://cydia.angelxwind.net/?page/net.angelxwind.appsyncunified-transitional
+Version: 9999.0
+Depiction: https://cydia.akemi.ai/?page/net.angelxwind.appsyncunified-transitional
 Tag: cydia::obsolete
