--- a/appinst/control
+++ b/appinst/control
@@ -3,11 +3,11 @@ Name: appinst (App Installer)
 Priority: standard
 Pre-Depends: firmware (>= 5.0)
 Depends: net.angelxwind.appsyncunified (>= 5.1)
-Version: 1.1.3
+Version: 1.1.4
 Architecture: iphoneos-arm
 Description: Install IPAs from the command line
 Maintainer: Karen/あけみ <karen@akemi.ai>
-Author: Linus Yang <laokongzi+appsync@gmail.com>
+Author: Karen/あけみ, Linus Yang <karen@akemi.ai>
 Section: Utilities
 Homepage: https://github.com/angelXwind/AppSync
 Tag: role::enduser, purpose::console
