--- a/pkg-actions/Makefile
+++ b/pkg-actions/Makefile
@@ -2,14 +2,14 @@ include $(THEOS)/makefiles/common.mk
 
 TOOL_NAME = postinst prerm
 
-postinst_FILES = postinst.c
-postinst_CFLAGS += -fvisibility=hidden -DPOSTINST
+postinst_FILES = pkg-actions.m
+postinst_CFLAGS += -fobjc-arc -fvisibility=hidden -DPOSTINST
 postinst_FRAMEWORKS = CoreFoundation
 postinst_INSTALL_PATH = /DEBIAN
 postinst_CODESIGN_FLAGS = -S../entitlements.xml
 
-prerm_FILES = postinst.c
-prerm_CFLAGS += -fvisibility=hidden
+prerm_FILES = pkg-actions.m
+prerm_CFLAGS += -fobjc-arc -fvisibility=hidden
 prerm_FRAMEWORKS = CoreFoundation
 prerm_INSTALL_PATH = /DEBIAN
 prerm_CODESIGN_FLAGS = -S../entitlements.xml
