--- a/appinst/control
+++ b/appinst/control
@@ -2,8 +2,8 @@ Package: com.linusyang.appinst
 Name: appinst (App Installer)
 Priority: standard
 Pre-Depends: firmware (>= 5.0)
-Depends: net.angelxwind.appsyncunified (>= 5.1), libzip5 (>= 1.7.3)
-Version: 1.1.4
+Depends: net.angelxwind.appsyncunified (>= 5.1), libzip
+Version: 1.2
 Architecture: iphoneos-arm
 Description: Install IPAs from the command line
 Maintainer: Karen/あけみ <karen@akemi.ai>
