--- a/transitional/nodelete-net.angelxwind.appsync70plus/DEBIAN/control
+++ b/transitional/nodelete-net.angelxwind.appsync70plus/DEBIAN/control
@@ -1,6 +1,6 @@
 Architecture: iphoneos-arm
 Author: Karen/あけみ
-Depends: net.angelxwind.appsyncunified
+Depends: ai.akemi.appsyncunified
 Description: Transitional package for AppSync Unified.
 Maintainer: Karen/あけみ
 Homepage: http://cydia.akemi.ai/
@@ -8,5 +8,5 @@ Name: AppSync Unified Transitional Package (70plus)
 Package: net.angelxwind.appsync70plus
 Section: Tweaks
 Version: 9999.0
-Depiction: https://cydia.akemi.ai/?page/net.angelxwind.appsyncunified-transitional
+Depiction: https://cydia.akemi.ai/?page/ai.akemi.appsyncunified-transitional
 Tag: cydia::obsolete
