appinst: Statically link against `libzip` instead of dynamically linking it for reasons mentioned in the README. This also means `libzip` is no longer an APT dependency.

--- a/appinst/control
+++ b/appinst/control
@@ -2,7 +2,7 @@ Package: ai.akemi.appinst
 Name: appinst (App Installer)
 Priority: standard
 Pre-Depends: firmware (>= 5.0)
-Depends: ai.akemi.appsyncunified (>= 5.1), libzip
+Depends: ai.akemi.appsyncunified (>= 5.1)
 Version: 2.0
 Architecture: iphoneos-arm
 Description: A command-line IPA app installer.
