--- a/appinst/Makefile
+++ b/appinst/Makefile
@@ -13,7 +13,8 @@ appinst_CCFLAGS += -std=c++11 -stdlib=libc++ -fobjc-arc -include ./zip.h -I . -f
 appinst_CFLAGS += -fobjc-arc -include ./zip.h -I . -fvisibility=hidden -Wno-unused-property-ivar
 appinst_FRAMEWORKS = Foundation ImageIO CoreGraphics
 appinst_PRIVATE_FRAMEWORKS = MobileCoreServices
-appinst_LIBRARIES = z zip
+appinst_LDFLAGS += $(THEOS)/lib/libzip.a
+appinst_LIBRARIES = z
 appinst_INSTALL_PATH = /usr/bin
 appinst_CODESIGN_FLAGS = -Sappinst_entitlements.plist
 include $(THEOS_MAKE_PATH)/tool.mk
