appinst: Add new `com.apple.security.exception.mach-lookup.global-name` entitlement as suggested by @opa334. IPC on the Dopamine jailbreak is still broken though, even with this new entitlement.

--- a/appinst/appinst_entitlements.plist
+++ b/appinst/appinst_entitlements.plist
@@ -9,6 +9,10 @@
 		<string>Install</string>
 		<string>InstallForLaunchServices</string>
 	</array>
+	<key>com.apple.security.exception.mach-lookup.global-name</key>
+	<array>
+		<string>com.apple.mobile.installd</string>
+	</array>
 	<key>platform-application</key>
 	<true/>
 </dict>
