.gitignore: Add `.theos-rootless` directory used by KarenTools/AkemiTools.

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
 *.o
 .theos/*
+.theos-rootless/*
 debs/*
 *.deb
 *.dylib
 **/.theos/*
+**/.theos-rootless/*
 */.theos/*
+*/.theos-rootless/*
 *.sublime-workspace
 _/*
 */obj/*
