--- a/entitlements.plist
+++ b/entitlements.plist
@@ -4,5 +4,11 @@
 <dict>
 	<key>platform-application</key>
 	<true/>
+	<key>com.apple.private.security.no-sandbox</key>
+	<true/>
+	<key>com.apple.private.security.storage.AppBundles</key>
+	<true/>
+	<key>com.apple.private.security.storage.AppDataContainers</key>
+	<true/>
 </dict>
 </plist>
